--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,18 +4,19 @@
   flex-direction: column;
 
   text-align: left;
-  background-color: #282c34;
+  background-color: #17221c;
 }
 
 .AppHeader {
   height: 90px;
   display: flex;
-  background-color: black;
+  background-color: #3A5A40;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: 50px;
-  color: white;
+  font-size: 40px;
+  color: #DAD7CD;
+  font-weight: 900;
   padding-left: 20px;
   padding-right: 20px;
   flex-wrap: wrap;
@@ -28,6 +29,6 @@
   align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #DAD7CD;
   padding-top: 50px;
 }
