--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ a {
 
 :root {
   --primary-color: #3a5a4000;
+  --secondary-color: rgba(243, 255, 133, 0.685);
 }
 
 .wallet-adapter-button-trigger {
@@ -25,17 +26,18 @@ a {
 
 button {
   background-color: var(--primary-color) !important;
-  color: white !important;
+  color: rgba(243, 255, 133, 1) !important;
   transition: .3s;
-  border: .5px solid rgba(133, 255, 160, 0.459) !important;
+  border: 1px solid var(--secondary-color) !important;
+  border-radius: .5em !important;
 }
 
 button:hover {
-  box-shadow: 0px 0px 10px 2px rgba(133, 255, 160, 0.459);
+  box-shadow: 0px 0px 10px 1px var(--secondary-color);
 }
 
 p {
-  color: #DAD7CD !important;
+  color: white !important;
 }
 
 /* 
