--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,12 @@ a {
 
 * {
   box-sizing: border-box;
+  color: black !important;
 }
 
 :root {
-  --primary-color: #3a5a4000;
-  --secondary-color: rgba(243, 255, 133, 0.685);
+  --primary-color: black;
+  --secondary-color: rgb(245, 235, 221);
 }
 
 .wallet-adapter-button-trigger {
@@ -25,19 +26,32 @@ a {
 }
 
 button {
-  background-color: var(--primary-color) !important;
-  color: rgba(243, 255, 133, 1) !important;
+  background-color: var(--primary-color)!important;
+  color: var(--secondary-color) !important;
   transition: .3s;
-  border: 1px solid var(--secondary-color) !important;
   border-radius: .5em !important;
+  transform-style: preserve-3d;
+
+}
+button::before {
+  content: "";
+  position: absolute !important;
+  inset: 0px !important;
+  transform: translate3d(0px, 0px, -1px); /* (X, Y, Z) */
+  background: linear-gradient(45deg, rgba(60,169,255,1) 0%, rgba(60,169,255,1) 20%, rgba(255,27,27,1) 20%, rgba(255,33,29,1) 40%, rgba(255,111,57,1) 40%, rgba(255,114,58,1) 60%, rgba(255,175,80,1) 60%, rgba(255,180,82,1) 80%, rgba(45,162,6,1) 80%, rgba(27,161,0,1) 100%);
+  border-radius: .4em !important;
+  transition: .3s !important;
 }
 
 button:hover {
-  box-shadow: 0px 0px 10px 1px var(--secondary-color);
+  transform: translate(-5px, -5px) !important;
+}
+button:hover::before {
+  transform: translate3d(5px, 5px, -1px) !important; /* (X, Y, Z) */
 }
 
-p {
-  color: white !important;
+p.light {
+  color: var(--secondary-color) !important;
 }
 
 /* 
