initial tokentransfer compilation bug fix refactor code,

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,7 +11,7 @@
 .AppHeader {
   height: 90px;
   display: flex;
-  /* background-color: rgba(0,0,0,.1); */
+  background-color: rgba(0,0,0,.1);
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -23,29 +23,47 @@
   flex-wrap: wrap;
   margin: 1em 1em 0em 1em;
   border-radius: 1em;
-  border: 3px solid rgba(0,0,0,1);
 }
 .AppTitle {
   color: var(--secondary-color) !important;
 }
 .AppTitleWrapper {
   background: black;
-  border-radius: .25em;
+  border-radius: .25em 0 0 0;
   padding: 0 .5em .25em .5em;
   transform-style: preserve-3d;
 }
-.AppTitleWrapper::before {
+.AppTitleWrapper:after,
+.AppTitleWrapper:before {
+  content: '';
+  position: absolute;
+}
+.AppTitleWrapper:after {
+  width: 100%;
+  height: 22px;
+  left: 10px;
+  bottom: 0;
+  transform: translatey(99%) skewx(45deg);
+  background: linear-gradient(90deg, rgba(60,169,255,1) 0%,  rgba(60,169,255,1) 25%, rgba(255,27,27,1) 25%,  rgba(255,27,27,1) 50%, rgba(255,111,57,1) 50%, rgba(255,114,58,1) 75%, rgba(255,175,80,1) 75%, rgba(255,180,82,1) 100%);
+}
+.AppTitleWrapper:before {
+  width: 100px;
+  height: 100%;
+  right: 0;
+  transform: translatex(99%) skewy(45deg);
+  top: 50px;
+  background:  linear-gradient(135deg, rgba(27,161,0,1) 0%, rgba(27,161,0,1) 46%, transparent 46%);
+}
+/* .AppTitleWrapper::before {
   content: "";
   position: absolute !important;
   background: linear-gradient(90deg, rgba(60,169,255,1) 0%, rgba(60,169,255,1) 20%, rgba(255,27,27,1) 20%, rgba(255,33,29,1) 40%, rgba(255,111,57,1) 40%, rgba(255,114,58,1) 60%, rgba(255,175,80,1) 60%, rgba(255,180,82,1) 80%, rgba(45,162,6,1) 80%, rgba(27,161,0,1) 100%);
   border-radius:0 0 .25em .25em !important;
   transition: .3s !important;
-  inset: 15px 0 !important;
+  inset: 20px 0 !important;
   transform: translate3d(0px, 20px, 1px); 
-}
-.AppTitleWrapper:hover::before {
+} */
 
-}
 .AppBody {
   height: 100%;
   display: flex;
