--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 .AppTitleWrapper {
   background: black;
-  border-radius: .25em 0 0 0;
+  border-radius: .25em 0 .25em 0;
   padding: 0 .5em .25em .5em;
   transform-style: preserve-3d;
 }
