--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ button {
   transition: .3s;
   border-radius: .5em !important;
   transform-style: preserve-3d;
+  outline: none !important;
 }
 button::before {
   content: "";
@@ -68,6 +69,28 @@ button:hover::before {
   color: var(--secondary-color) !important;
 }
 
+button.toggle {
+  background-color: rgba(0,0,0,.1) !important;
+  transition:color 0.3s;
+  box-shadow: none !important;
+}
+button.toggle:hover {
+  transform: translate(0px, 0px) !important;
+  background: rgba(0,0,0,.2) !important;
+}
+button.toggle::before {
+  background: none !important;
+}
+.toggleSelector {
+  position:absolute;
+  width: 30px;
+  background-color: rgba(0,0,0,.1);
+  backdrop-filter: blur(4px);
+  margin-left: 1px;
+  padding-top:28px;
+  border-radius: .5em;
+  transition: .3s;
+}
 /* 
 .glowEffect {
   box-shadow: 0px 0px 10px 3px rgba(0, 255, 255, 0.404);
